--- a/main.css
+++ b/main.css
@@ -59,7 +59,8 @@ header {
     /* background: rgb(7,13,52);
 background: linear-gradient(135deg, rgba(7,13,52,1) 0%, rgba(244,244,219,1) 52%);  */
     /* background-color:#F4F4DB;; */
-    background-color: #F7F7F7; 
+    /* background-color: #F7F7F7;  */
+    background-color: #C8CDD0;
 
 }
 .img {
