--- a/main.css
+++ b/main.css
@@ -369,13 +369,137 @@ h2 {
 
   
    }
-  @media (max-width: 1199px){ }
+  @media (max-width: 1199px){
+    body {
+      width: 900px;
+    }
+    section, header, footer, .section3{
+      width : 900px;
+    }
+    .content, .screen, .screen1, .screen2, .slider, .slider3, .str {
+      margin-top: 30px;
+      margin-bottom: 30px;
+      width: 800px; 
+     
+    }
+    .cardd {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    .card3 {
+      width : 700px;
+      height:  300px;
+      margin-bottom: 20px ;
+    }
+    .slider3 {
+    
+      justify-content:center; 
+  
 
-  @media (max-width: 991px){ }
+    }
+    .card4 {
+      margin-bottom: 20px ; 
+    }
+   }
+
+  @media (max-width: 991px){
+    body {
+      width: 766px;
+    }
+    section, header, footer, .section3{
+      width : 766px;
+    }
+    .content, .screen, .screen1, .screen2, .slider, .slider3, .str {
+      margin-top: 30px;
+      margin-bottom: 30px;
+      width: 700px; 
+     
+    }
+    .cardd {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    .card3 {
+      width : 700px;
+      height:  300px;
+      margin-bottom: 20px ;
+    }
+    .slider3 {
+    
+      justify-content:center; 
   
-  @media (max-width: 767px){ }
+
+    }
+    .card4 {
+      margin-bottom: 20px ; 
+    }
+   }
   
-  @media (max-width: 575px){ }
+  @media (max-width: 767px){
+    body {
+      width: 570px;
+    }
+    section, header, footer, .section3{
+      width : 570px;
+    }
+    .content, .screen, .screen1, .screen2, .slider, .slider3, .str {
+      margin-top: 30px;
+      margin-bottom: 30px;
+      width: 500px; 
+     
+    }
+    .cardd {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    .card3 {
+      width : 500px;
+      height:  400px;
+      margin-bottom: 20px ;
+    }
+    .slider3 {
+    
+      justify-content:center; 
+  
+
+    }
+    .card4 {
+      margin-bottom: 20px ; 
+    }
+   }
+  
+  @media (max-width: 575px){ 
+    body {
+      width: 400px;
+    }
+    section, header, footer, .section3{
+      width : 400px;
+    }
+    .content, .screen, .screen1, .screen2, .slider, .slider3, .str {
+      margin-top: 30px;
+      margin-bottom: 30px;
+      width: 350px; 
+     
+    }
+    .cardd {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    .card3 {
+      width : 340px;
+      height:  450px;
+      margin-bottom: 20px ;
+    }
+    .slider3 {
+    
+      justify-content:center; 
+  
+
+    }
+    .card4 {
+      margin-bottom: 20px ; 
+    }
+  }
 
 
 
