--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ section {
   justify-content: center;
   width: 1440px; 
   margin: 0px auto 0px auto;
-  background-color: #FF5B3D; 
+  /* background-color: #FF5B3D;  */
 }
 footer {
   margin-top: 50px;
@@ -140,7 +140,7 @@ h2 {
    
   justify-content: space-between;
   margin-bottom: 50px;
-  background-color: aqua;
+  /* background-color: #F4F4DB; */
 }
 
 .screen2 {
@@ -149,7 +149,7 @@ h2 {
      
     display: inline-flex;
     justify-content: space-between;
-    background-color: aqua;
+    /* background-color:#F4F4DB; */
 }
 
 .screen {
@@ -159,7 +159,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: aqua;
+    /* background-color: #F4F4DB; */
 }
 .str {
     text-align: center;
@@ -176,7 +176,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   align-content: space-around;
-  background-color: aqua;
+  /* background-color: aqua; */
 
 }
 .slider3 {
@@ -185,7 +185,7 @@ h2 {
   justify-content: space-between; 
   flex-wrap: wrap;
   align-content: space-around;
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
 .content {
@@ -224,7 +224,9 @@ h2 {
 .text {
   width : 600px ;
 }
-
+.map {
+  width: 600px;
+}
 
 
 
@@ -377,29 +379,13 @@ h2 {
       width : 900px;
     }
     .content, .screen, .screen1, .screen2, .slider, .slider3, .str {
-      margin-top: 30px;
-      margin-bottom: 30px;
+ 
       width: 800px; 
      
     }
-    .cardd {
-      margin-left: 15px;
-      margin-right: 15px;
-    }
-    .card3 {
-      width : 700px;
-      height:  300px;
-      margin-bottom: 20px ;
-    }
-    .slider3 {
-    
-      justify-content:center; 
-  
 
-    }
-    .card4 {
-      margin-bottom: 20px ; 
-    }
+ 
+   
    }
 
   @media (max-width: 991px){
@@ -410,28 +396,21 @@ h2 {
       width : 766px;
     }
     .content, .screen, .screen1, .screen2, .slider, .slider3, .str {
-      margin-top: 30px;
-      margin-bottom: 30px;
+     
       width: 700px; 
      
     }
-    .cardd {
-      margin-left: 15px;
-      margin-right: 15px;
-    }
+
     .card3 {
       width : 700px;
       height:  300px;
-      margin-bottom: 20px ;
-    }
-    .slider3 {
     
-      justify-content:center; 
-  
-
     }
-    .card4 {
-      margin-bottom: 20px ; 
+ 
+
+
+    .map {
+      width: 500px;
     }
    }
   
@@ -441,30 +420,29 @@ h2 {
     }
     section, header, footer, .section3{
       width : 570px;
+     background-size: cover;
     }
     .content, .screen, .screen1, .screen2, .slider, .slider3, .str {
-      margin-top: 30px;
-      margin-bottom: 30px;
+
       width: 500px; 
      
     }
-    .cardd {
-      margin-left: 15px;
-      margin-right: 15px;
+    .screen2 {
+      justify-content:center;
+      display:flex;
+      flex-direction: column;
     }
+
     .card3 {
       width : 500px;
       height:  400px;
-      margin-bottom: 20px ;
+      
     }
-    .slider3 {
-    
-      justify-content:center; 
-  
 
-    }
-    .card4 {
-      margin-bottom: 20px ; 
+ 
+    .text {
+      width: 400px;
+
     }
    }
   
@@ -476,29 +454,24 @@ h2 {
       width : 400px;
     }
     .content, .screen, .screen1, .screen2, .slider, .slider3, .str {
-      margin-top: 30px;
-      margin-bottom: 30px;
+
       width: 350px; 
      
     }
-    .cardd {
-      margin-left: 15px;
-      margin-right: 15px;
+    .text {
+      width: 350px;
+
     }
     .card3 {
       width : 340px;
       height:  450px;
-      margin-bottom: 20px ;
     }
-    .slider3 {
     
-      justify-content:center; 
-  
+    .map {
+      width: 350px;
+    }
 
-    }
-    .card4 {
-      margin-bottom: 20px ; 
-    }
+
   }
 
 
