--- a/main.css
+++ b/main.css
@@ -11,8 +11,11 @@ body {
 }
 p, h1, h2, h3, h4, h5, .btn , ul, li {
     font-family: 'Open Sans', sans-serif;
-    text-align: justify;
-    color:#270949;
+   
+    color:#1D0737;
+}
+p {
+  text-align: justify;
 }
 
 .introduction {
@@ -78,7 +81,7 @@ h4, h2 {
 .card {
     width:350px;
     height: 450px;
-    background-color:#B3CCCF;
+    background-color:#DDCAC7;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -89,7 +92,7 @@ h4, h2 {
 .cardd {
     width:300px;
     height: 400px;
-    background-color: #B3CCCF;
+    background-color: #DDCAC7;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -99,7 +102,7 @@ h4, h2 {
 .card3 {
   width:300px;
   height: 500px;
-  background-color: #B3CCCF;
+  background-color: #DDCAC7;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -111,7 +114,7 @@ h4, h2 {
 .card4 {
   width:500px;
   height: 450px;
-  background-color: #B3CCCF;
+  background-color: #DDCAC7;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -415,25 +418,17 @@ h2 {
       height:  600px;
     }
     .card4 {
-      width : 85%;
+      width : 55%;
      
     }
     .map {
       width: 65%;
     }
-    
+    .imgg {
+      width : 65%
+    }
 
-    /* body {
-      width: 900px;
-    }
-    section, header, footer, .section3{
-      width : 900px;
-    }
-    .content, .screen, .screen1, .screen2, .slider, .slider3, .str {
- 
-      width: 800px; 
-     
-    } */
+
 
  
    
@@ -467,6 +462,12 @@ h2 {
     .map, .btn {
       width: 85%;
     }
+    .card4 {
+      width : 85%;
+     
+    }
+  
+ 
 
   
    }
@@ -477,6 +478,9 @@ h2 {
       justify-content:center;
       display:flex;
       flex-direction: column;
+    }
+    .imgg {
+      width : 75%
     }
 
 
@@ -489,6 +493,11 @@ h2 {
     .ant-carousel-element {
       width: 100%;
     }
+    .card4 {
+      height: 350px;
+    }
+
+
   }
   
 
