--- a/main.css
+++ b/main.css
@@ -6,7 +6,8 @@ body {
     flex-direction: column;
     justify-content: center;
     width: 1440px;
-    background-image: url(images/oboi11.png);
+    background-color:  rgba(235,235,235,1);
+   
 
 }
 p, h1, h2, h3, h4, h5, .btn , ul, li {
@@ -41,6 +42,9 @@ footer {
   background-color: #4B4444;
  
 
+}
+.section1 {
+  background-image: url(images/oboi11.png);
 }
 
 footer p, footer h1, footer h2, footer h3, footer h4, footer h5, footer .btn ,footer ul,footer li, footer a {
@@ -85,6 +89,11 @@ h4, h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* padding-top: 80px; */
+    /* justify-content: space-between;
+    padding-top: 80px;
+    padding-bottom: 50px; */
+    /* justify-content: space-around; */
     color:#F4F4DB;
  
 }
@@ -108,6 +117,7 @@ h4, h2 {
   justify-content: center;
   padding-left: 20px;
   padding-right: 20px;
+  box-shadow: 0.4em 0.4em 5px rgba(122,122,122,0.5);
 
 }
 
@@ -249,6 +259,10 @@ h2 {
 }
 .map {
   width: 600px;
+}
+.section4 {
+  background: rgb(235,235,235);
+  background: linear-gradient(180deg, rgba(235,235,235,1) 18%, rgba(75,68,68,1) 100%);
 }
 
 
