--- a/main.css
+++ b/main.css
@@ -7,8 +7,7 @@ body {
     justify-content: center;
     width: 1440px;
     background-color: #DFD1CD;
-   
-    /* #D8CDCA */
+
 }
 p, h1, h2, h3, h4, h5, .btn , ul, li {
     font-family: 'Open Sans', sans-serif;
@@ -20,7 +19,6 @@ p {
 }
 
 .introduction {
-  /* background-image: url(images/back1.jpg) ;  */
   background-size: 100%;
 }
 section {
@@ -30,7 +28,7 @@ section {
   justify-content: center;
   width: 1440px; 
   margin: 0px auto 0px auto;
-  /* background-color: #FF5B3D;  */
+
 }
 footer {
   margin-top: 50px;
@@ -43,12 +41,12 @@ footer {
  
 
 }
-.section1 {
-  /* background-image: url(images/oboi11.png); */
-  /* background-color: #EE771A; */
-}
+
 .sec3 {
-  background-color: #CB9368;
+  background-color: #4B4444;
+}
+.sec3 h2 {
+  color: #F7F7F7;
 }
 
 footer p, footer h1, footer h2, footer h3, footer h4, footer h5, footer .btn ,footer ul,footer li, footer a {
@@ -66,8 +64,6 @@ header {
   background-image: url(images/back1.jpg) ;
   background-repeat: no-repeat;
   background-size: cover; 
-  /* background-size: 100%; */
-
 
 }
 
@@ -85,6 +81,10 @@ div {
 h4, h2 {
     text-align: center ;
 }
+h2 {
+  font-size: 34px;
+  font-weight: normal;
+}
 
 .card {
     width:350px;
@@ -95,19 +95,14 @@ h4, h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* padding-top: 80px; */
-    /* justify-content: space-between;
-    padding-top: 80px;
-    padding-bottom: 50px; */
-    /* justify-content: space-around; */
-    color:#F4F4DB;
- 
 }
 
 .cardd {
     width:300px;
     height: 400px;
+    border-radius: 4px;
     background-color: #EA8344;
+    box-shadow: 0.4em 0.4em 5px rgba(209,73,14,0.8);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -117,20 +112,23 @@ h4, h2 {
 .card3 {
   width:300px;
   height: 500px;
+  border-radius: 4px;
   background-color: #DDCAC7;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-left: 20px;
   padding-right: 20px;
-  box-shadow: 0.4em 0.4em 5px rgba(122,122,122,0.5);
+  box-shadow: 0.4em 0.4em 5px #2A1717;
 
 }
 
 .card4 {
   width:500px;
   height: 450px;
+  border-radius: 4px;
   background-color: #DDCAC7;
+  box-shadow: 0.4em 0.4em 5px rgba(191,138,123,0.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -139,9 +137,7 @@ h4, h2 {
 
 }
 
-h2 {
-  font-size: 30px;
-}
+
 
 .imgg, .img1 {
   align-self: center;
@@ -157,13 +153,12 @@ h2 {
 
 }
 
+
 .screen1 {
   margin: 0px auto 0px auto;
-   /* width: 1100px;  */
-   
   justify-content: space-between;
   margin-bottom: 50px;
-  /* background-color: #F4F4DB; */
+ 
 }
 
 .screen2 {
@@ -172,7 +167,7 @@ h2 {
      
     display: inline-flex;
     justify-content: space-between;
-    /* background-color:#F4F4DB; */
+   
 }
 
 .screen {
@@ -182,7 +177,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* background-color: #F4F4DB; */
+   
 }
 .str {
     text-align: center;
@@ -267,11 +262,9 @@ h2 {
 .map {
   width: 600px;
 }
-/* .section4 {
-  background: rgb(235,235,235);
-  background: linear-gradient(180deg, rgba(235,235,235,1) 18%, rgba(75,68,68,1) 100%);
-} */
-
+.section4 {
+  background-color: #E8E0DF;
+}
 
 
 
